--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,53 @@
-cffi==1.14.6
-chardet==4.0.0
-cryptography==38.0.4
+altair==5.4.1
+attrs==24.2.0
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.0
+click==8.1.7
+cryptography==43.0.3
 et-xmlfile==1.1.0
-layout==0.4.1
-numpy==1.21.2
-openpyxl==3.0.10
-pandas==1.3.2
-pdfminer.six==20220524
-pycparser==2.20
-pycryptodome==3.10.1
-python-dateutil==2.8.2
-pytz==2021.1
-six==1.16.0
-sortedcontainers==2.4.0
-xlsxwriter==3.0.2
+gitdb==4.0.11
+GitPython==3.1.43
+idna==3.10
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+narwhals==1.9.4
+numpy==2.1.2
+openpyxl==3.1.5
+packaging==24.1
+pandas==2.2.3
+pdfminer.six==20231228
+pdfplumber==0.11.4
+pillow==10.4.0
+protobuf==5.28.2
+pyarrow==17.0.0
+pycparser==2.22
+pycryptodome==3.21.0
+pydeck==0.9.1
+Pygments==2.18.0
 PyPDF2==3.0.1
+pypdfium2==4.30.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+referencing==0.35.1
+reportlab==4.2.5
+requests==2.32.3
+rich==13.9.2
+rpds-py==0.20.0
+six==1.16.0
+smmap==5.0.1
 streamlit==1.39.0
+tenacity==9.0.0
+toml==0.10.2
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+XlsxWriter==3.2.0
