--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ narwhals==1.9.4
 numpy==2.1.2
 openpyxl==3.1.5
 packaging==24.1
-pandas==2.2.3
+pandas
 pdfminer.six==20231228
 pdfplumber==0.11.4
 pillow==10.4.0
