--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 narwhals==1.9.4
-numpy==2.1.2
+numpy
 openpyxl==3.1.5
 packaging==24.1
 pandas
